# Control-RetroVisual

./: retroVisual.ttt
src/image_viewer_cpp/: CMakeLists.txt  package.xml
src/image_viewer_cpp/src/: image_subscriber.cpp
src/line_follower/: CMakeLists.txt  package.xml  setup.py
src/line_follower/launch/: follower.launch.py
src/line_follower/line_follower/: light_detector.py  prueba1.py
src/line_follower/src/: camera.cpp
src/line_followerxime/line_followerxime/: testmodel.py
src/reto_closedloop/: package.xml  setup.cfg  setup.py
src/reto_closedloop/config/: path_params.yaml
src/reto_closedloop/launch/: path_ctrl_close.launch.py
src/reto_closedloop/reto_closedloop/: close_loop_ctrl.py  ctrlBrenda.txt  hsv_calibrator.py  light_detector.py  odometry.py  path_gen_close.py
src/sphere_follower/: package.xml  setup.cfg  setup.py
src/sphere_follower/launch/: move_follow.launch.py
src/sphere_follower/sphere_follower/: follow_sphere.py  move_sphere.py
