<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>line_follower</name>
  <version>0.0.0</version>
  <description>Puzzlebot Closed Loop Control with Visual Traffic Light Detection and Line Follower Algorithm</description>
  <maintainer email="neronf123@gmail.com">Mateo Sanchez</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencias comunes -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Python -->
  <depend>rclpy</depend>
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>

  <!-- C++ -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>opencv4</depend>

  <!-- Generadores de mensajes (si los usas) -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
