<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reto_closedloop</name>
  <version>0.0.0</version>
  <description>Puzzlebot Closed Loop Control with Visual Traffic Light Detection</description>
  <maintainer email="mario.mtz@manchester-robotics.com">Mario Martinez</maintainer>
  <license>Apache-2.0</license>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>
  <depend>ros2launch</depend>
  <depend>cv_bridge</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
